<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav"
    app:startDestination="@id/logInFragment">
    <fragment
        android:id="@+id/logInFragment"
        android:name="com.udacity.shoestore.login.LogInFragment"
        android:label="@string/title_login" >
        <action
            android:id="@+id/action_logInFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
        android:label="@string/title_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.instruction.InstructionFragment"
        android:label="@string/title_instructions" >
        <action
            android:id="@+id/action_instructionFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.udacity.shoestore.shoeslist.ShoesListFragment"
        android:label="@string/title_shoe_list" >
        <action
            android:id="@+id/action_shoesListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
        <action
            android:id="@+id/action_shoesListFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/logInFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.shoedetail.ShoeDetailFragment"
        android:label="@string/title_shoe_detail" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment" />
    </fragment>
</navigation>