<?xml version="1.0" encoding="utf-8"?><!--Constraint layout to keep all views in the center and
constraint to each other-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.udacity.shoestore.models.Shoe" />
        
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodel.ViewModelApp" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D0B48B">

        <TextView
            android:id="@+id/shoe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="200dp"
            android:fontFamily="serif-monospace"
            android:text="@string/shoe_name_text"
            android:textColor="#342B27"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:fontFamily="serif-monospace"
            android:text="@string/shoe_size_text"
            android:textColor="#342B27"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="28dp"
            android:fontFamily="serif-monospace"
            android:text="@string/company_text"
            android:textColor="#342B27"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <TextView
            android:id="@+id/Description_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:fontFamily="serif-monospace"
            android:text="@string/description_detail_text"
            android:textColor="#342B27"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />

        <EditText
            android:id="@+id/shoe_name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/hint_shoe"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.name}"
            android:textAlignment="center"
            android:textColor="#342B27"
            app:layout_constraintBottom_toTopOf="@+id/company_editText"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/company_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/hint_company"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.company}"
            android:textAlignment="center"
            android:textColor="#342B27"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_textView"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/shoe_size_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/shoe_size_hint"
            android:text="@={shoeViewModel.size}"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="#342B27"

            app:layout_constraintBottom_toTopOf="@+id/description_detail_textView"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/description_detail_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:gravity="start|top"
            android:hint="@string/description_hint"
            android:inputType="textImeMultiLine"
            android:text="@={shoeViewModel.description}"
            android:textAlignment="center"
            android:textColor="#342B27"
            app:layout_constraintBaseline_toBaselineOf="@+id/Description_detail_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginBottom="260dp"
            android:fontFamily="@font/asar"
            android:text="@string/submit_button"
            android:textColor="#342B27"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_detail_textView" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/asar"
            android:text="@string/cancel_button"
            android:textColor="#342B27"
            app:layout_constraintBaseline_toBaselineOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>