<?xml version="1.0" encoding="utf-8"?><!--Constraint layout to keep the textviews, editviews,
and buttons in the center and constraint to each other-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D0B48B"
        android:backgroundTint="#D0B48B"
        tools:context=".LogInFragment">

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:fontFamily="@font/asar"
            android:text="@string/log_in_button"
            android:textColor="#342B27"
            app:layout_constraintBaseline_toBaselineOf="@+id/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="300dp"
            android:fontFamily="serif-monospace"
            android:text="@string/email"
            android:textAlignment="viewEnd"
            android:textColor="#342B27"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toEndOf="@+id/email_label" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.405"
            app:layout_constraintStart_toEndOf="@+id/password_label" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="serif-monospace"
            android:text="@string/password"
            android:textAlignment="viewEnd"
            android:textColor="#342B27"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintVertical_bias="0.067" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/asar"
            android:text="@string/sign_up"
            android:textColor="#342B27"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/log_in_button"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.091" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>