<?xml version="1.0" encoding="utf-8"?>

<!--Constraint layout to keep the textviews in the center
and constraint to each other-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D0B48B"
        tools:context=".InstructionFragment">

        <TextView
            android:id="@+id/instruction_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/instruction_text"
            android:textColor="#342B27"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <TextView
            android:id="@+id/instruction_description_text"
            android:layout_width="214dp"
            android:layout_height="92dp"
            android:fontFamily="serif-monospace"
            android:text="@string/instruction_desciption"
            android:textAlignment="center"
            android:textColor="#342B27"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_textView"
            app:layout_constraintVertical_bias="0.071" />

        <Button
            android:id="@+id/continue_instruction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asar"
            android:text="@string/continue_button"
            android:textColor="#342B27"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_description_text"
            app:layout_constraintVertical_bias="0.08" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>